Fixed video on mobile, added dashboards short intro and connect your data copy

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -137,3 +137,9 @@
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
 
+iframe[src*=youtube] {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  padding-bottom: 10px;
+}
